# features/material/domain/entities/find_all_materials_response_entity.go
@@ -1,0 +1,6 @@
+package entities
+
+// FindAllMaterialsResponse represents the response for getting all materials.
+type FindAllMaterialsResponse struct {
+	Data []MaterialEntity `json:"data"`
+}
